@@ -1,3 +1,8 @@
+2003-10-28  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libjpeg/jpeg-data.c: Do not depend on unistd.h. Reported by
+	  Jan Patera <patera@pictview.com>.
+
 2003-10-27  Lutz Mueller <lutz@users.sourceforge.net>
 
 	* libexif: Canon maker notes seem to work now (both loading and
